# memos

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/doc.prose.review/: SKILL.md
.claude/skills/sys.project.create/: SKILL.md
.claude/skills/sys.project.release/: SKILL.md
.claude/skills/sys.project.specify/: SKILL.md
.claude/skills/sys.task.breakdown/: SKILL.md
.claude/skills/sys.task.create/: SKILL.md
.github/workflows/: ci.yml
projects/confparse/: AGENTS.md  README.md
projects/dotfiles/: AGENTS.md  README.md
projects/dotfiles/spec/: configs.md  (+1 more)
projects/gorequests/: AGENTS.md  README.md
projects/memclutter/: AGENTS.md  README.md
projects/memos/: AGENTS.md  README.md
projects/nocodb-migrator/: AGENTS.md  README.md
projects/proxycheck/: AGENTS.md  README.md
rules/: data.md  docker.md  git.md  go.md  history.md  language.md  projects.md  python.md  repo-structure.md  scripts.md  sdd.md  skills.md  stack.md  tasks.md  vue.md  workflow.md
scripts/: memos  pyproject.toml
scripts/memos/: pyproject.toml
scripts/memos/src/memos/: __init__.py  __main__.py  cli.py  doctor.py  shims.py
scripts/memos/tests/: test_doctor.py  test_shims.py
skills/doc.prose.review/: SKILL.md
skills/sys.project.create/: SKILL.md
skills/sys.project.release/: SKILL.md
skills/sys.project.specify/: SKILL.md
skills/sys.task.breakdown/: SKILL.md
skills/sys.task.create/: SKILL.md
skills/sys.task.finish/: SKILL.md
skills/sys.task.plan/: SKILL.md
skills/sys.task.specify/: SKILL.md
(+147 files in other folders)
