[project]
name = "memos"
version = "0.1.0"
description = "The memos OS CLI — helper commands that keep the personal OS running."
requires-python = ">=3.11"
dependencies = ["pyyaml>=6"]

[project.scripts]
memos = "memos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memos"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11", "types-PyYAML>=6"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
cache-dir = "../.cache/ruff"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
files = ["src"]
strict = true
cache_dir = "../.cache/mypy"

[tool.pytest.ini_options]
cache_dir = "../.cache/pytest"
